[gd_scene load_steps=6 format=2]

[ext_resource path="res://items/inventory/inventory_item_button.gd" type="Script" id=1]
[ext_resource path="res://items/item_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/kenvector_future.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 14 )

[node name="inventory_item_button" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -536.0
margin_bottom = -536.0
rect_min_size = Vector2( 60, 60 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_button" parent="." instance=ExtResource( 2 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="sell_button" type="Button" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -97.0
margin_bottom = -69.0
custom_fonts/font = SubResource( 2 )
text = "sell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_touch_button" type="TouchScreenButton" parent="sell_button"]
shape = SubResource( 1 )
